<resources>
    <string name="app_name">Project4_FireBase_CRUD</string>
    <string name="welcome">Welcome</string>
    <string name="insert_data">Insert Data</string>
    <string name="fetch_data">Fetch Data</string>
    <string name="name">Name:</string>
    <string name="ngoquocquan">ngoquocquan</string>
    <string name="age">Age:</string>
    <string name="salary">Salary:</string>
    <string name="_20">20</string>
    <string name="_1000">1000</string>
    <string name="save_data">Save Data</string>
    <string name="information">Information</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="id">ID:</string>
    <string name="updateting_record">Updateting Record</string>
    <string name="loading">Loading...</string>
</resources>