<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="@drawable/background_activity"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:textAlignment="center"
        android:textSize="40sp"
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/information" />
    <LinearLayout
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="center_vertical"
            android:textSize="30sp"
            android:text="@string/id"
            android:layout_width="100dp"
            android:layout_height="match_parent">
        </TextView>
        <TextView
            android:id="@+id/txtIdInfor"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="center_vertical"
            android:textSize="30sp"
            android:text="@string/name"
            android:layout_width="100dp"
            android:layout_height="match_parent">
        </TextView>
        <TextView
            android:id="@+id/txtNameInfor"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>

    </LinearLayout>
    <LinearLayout
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="center_vertical"
            android:textSize="30sp"
            android:text="@string/age"
            android:layout_width="100dp"
            android:layout_height="match_parent">
        </TextView>
        <TextView
            android:id="@+id/txtAgeInfor"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="center_vertical"
            android:textSize="30sp"
            android:text="@string/salary"
            android:layout_width="100dp"
            android:layout_height="match_parent">
        </TextView>

        <TextView
            android:id="@+id/txtSalaryInfor"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnUpdateInfor"
            android:text="@string/update"
            android:textStyle="bold"
            android:textSize="18sp"
            android:background="@drawable/background_button"
            android:layout_marginStart="25dp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDeleteInfor"
            android:text="@string/delete"
            android:textStyle="bold"
            android:textSize="18sp"
            android:background="@drawable/background_button"
            android:layout_width="150dp"
            android:layout_marginStart="60dp"
            android:layout_height="wrap_content"/>



    </LinearLayout>


</LinearLayout>