<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/background_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:layout_marginTop="250dp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:textSize="40sp"
        android:textAlignment="center"
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome" />

    <androidx.appcompat.widget.AppCompatButton
        android:background="@drawable/background_button"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:id="@+id/btnInsert"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/insert_data" />

    <androidx.appcompat.widget.AppCompatButton
        android:background="@drawable/background_button"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:id="@+id/btnFetch"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/fetch_data" />
</LinearLayout>