<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:background="@drawable/background_activity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:textAlignment="center"
        android:textSize="30sp"
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/updateting_record" />

    <LinearLayout
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/name"
            android:layout_width="100dp"
            android:layout_height="match_parent">
        </TextView>
        <EditText
            android:id="@+id/edtUpdateName"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </EditText>

    </LinearLayout>
    <LinearLayout
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/age"
            android:layout_width="100dp"
            android:layout_height="match_parent">
        </TextView>
        <EditText
            android:id="@+id/edtUpdateAge"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/salary"
            android:layout_width="100dp"
            android:layout_height="match_parent">
        </TextView>
        <EditText
            android:id="@+id/edtUpdateSalary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>



    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:text="@string/update"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@drawable/background_button"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:id="@+id/btnUpdating"
        android:layout_width="150dp"
        android:layout_height="wrap_content"/>




</LinearLayout>